--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       color: #ffffff;
       
-      background-color: green;
+      background-color: blue;
       font-family: 'Bree Serif', serif;
     }
 
